k8s/ingress/nginxf5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: <your-hostname>.us-east-1.amazonaws.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: nginx2p-svc
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: nginx2p-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-deployment-svc
            port:
              number: 80
